api+manager file uploading
