# infostradka-server/swagger_server/controllers/api_controller.py
@@ -3,12 +3,12 @@ import six
 
 from swagger_server.models.rotator import Rotator  # noqa: E501
 from swagger_server import util
-from swagger_server.config import MONGO_HOST, MONGO_PORT
+from swagger_server.config import MONGO_HOST, MONGO_PORT, FILES_DIR
 
 #own
 from pymongo import MongoClient
-import json
-import base64
+import json, base64, os
+from flask import send_from_directory
 
 
 def get_elements():  # noqa: E501
@@ -37,10 +37,6 @@ def get_elements():  # noqa: E501
     for d3 in right:
         rightdb.append(d3)
 
-    #print(newsdb)
-
-    #JSON = {"left":[{"since":"2018-04-10 22:00","until":"2019-04-10 22:00","duration":5,"type":"video","content":{"source":"http://distribution.bbb3d.renderfarming.net/video/mp4/bbb_sunflower_1080p_60fps_normal.mp4","subtitles":""}},{"since":"2018-04-10 22:00","until":"2019-04-10 22:00","duration":15,"type":"www","content":{"source":"http://example.org/"}},{"since":"2018-04-10 22:00","until":"2019-04-10 22:00","duration":15,"type":"www","content":{"source":"http://example.com/"}}],"right":[{"since":"2018-04-10 22:00","until":"2019-04-10 22:00","duration":5,"source":"https://c1cleantechnicacom-wpengine.netdna-ssl.com/files/2018/02/Wind-Power-Birds.jpg"}],"news":[{"since":"2018-04-10 22:00","until":"2019-04-10 22:00","duration":15,"title":"Aaa, kotki dwa","content":"...szarobure obydwa czy coś tam jakoś tam coś.<br><br>BARDZO DUŻO TEKSTU TUTAJ...","important":0},{"since":"2018-04-10 22:00","until":"2019-04-10 22:00","duration":5,"title":"News2","content":"Lill news numero due","important":1}]}
-    #return {newsdb}
     return {"left": leftdb, "right": rightdb, "news": newsdb}
 
 
@@ -50,19 +46,17 @@ def get_screenshot():
 
 def put_screenshot(display_id, display_name, screenshot):
     #screenshot to base64
-#    if (type(screenshot) is FileStorage):
-#    print(screenshot.read())
     ssencoded = base64.b64encode(screenshot.read()).decode('ascii')
 
     #db handler
     client = MongoClient(MONGO_HOST, MONGO_PORT)
     db = client.infostradka #select db infostradka
 
-#    print(display_id)
-#    print(display_name)
-#    print(ssencoded)
-
     #db upload into scrshots collection
-    db.scrshots.insert_one({"display_id": display_id, "display_name": display_name, "screenshot": ssencoded})
-
+    db.scrshots.update({"display_id": display_id}, {"display_id": display_id, "display_name": display_name, "screenshot": ssencoded}, upsert=True)
     pass
+
+def get_file(hash):
+    dir = os.path.join(os.getcwd(), FILES_DIR)
+    print(dir)
+    return send_from_directory(directory=dir, filename=hash, mimetype='image/jpeg')
